# quids-evm-cpp

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  FEATURES.md  LICENSE  Makefile  Project Structure  QUANTUM_SPEC.md  README.md  TECHNICAL_SPEC.md  TODO.md  WHITEPAPER.md  address_blake3_qzkp_decentralized_geohashed.md  ai_flow.md  block_flow.md  bugfix.md  cli_implementation.md  compile_commands.json  config.json  evm_flow.md  ideas.md  openssl.cnf  post_init_flow.md  process.md  qzkp_rr1_osf.md  realtime_benchmark.py  rollups.md  startup_flow.md  transaction_flow.md  upgrade_flow.md  vectors_and_vss_kyber_falcon_security_resilience.md  whitepaper.html
.github/workflows/: ci.yml
cmake/: FindBLAKE3.cmake
contracts/: Quids.sol
docs/: P2P.md
examples/: p2p_example.cpp
include/api/: RollupAPI.h  RollupAPI.hpp
include/blockchain/: AIBlock.hpp  Account.hpp  AddressManager.hpp  Block.hpp  Chain.hpp  Transaction.h  Transaction.hpp  ZKPBlockchain.h  ZKPBlockchain.hpp
include/cli/: QuidsCLI.hpp  QuidsCommand.hpp
include/cli/commands/: StartCommand.hpp  StatusCommand.hpp  StopCommand.hpp
include/common/: Config.hpp  Logger.hpp
include/consensus/: OptimizedPOBPC.hpp  POBPC.h  POBPC.hpp
include/control/: QuidsControl.hpp
include/crypto/: QuantumCrypto.h  falcon_signature.hpp
include/drivers/: DriverSystem.h  DriverSystem.hpp
include/evm/: Address.h  Address.hpp  Compression.h  Compression.hpp  EVMExecutor.h  EVMExecutor.hpp  EvmAbiCompat.h  EvmAbiCompat.hpp  ExternalLink.h  ExternalLink.hpp  FloatingPoint.h  FloatingPoint.hpp  Memory.h  Memory.hpp  ProofVerification 2.hpp  ProofVerification.h  ProofVerification.hpp  ProofVerifierImpl.hpp  SolidityParser.h  SolidityParser.hpp  Stack.h  Stack.hpp  Storage.h  Storage.hpp  Types.h  uint256.hpp
include/l1/: RollupContract.h  RollupContract.hpp
include/network/: NATPMP.hpp  OptimizedNetworkLayer.hpp  P2PConnection.hpp  P2PNetwork.h  P2PNetwork.hpp  P2PNode.hpp  QUICTransport.hpp  STUNClient.hpp  UPnPClient.hpp
include/node/: ForwardDeclarations.hpp  QuidsConfig.hpp  QuidsNode.hpp  RollupNode.h  RollupNode.hpp  SystemHealth.hpp
include/quantum/: OpenSSLPaths.hpp.in  QuantumCircuit.hpp  QuantumCrypto.h  QuantumCrypto.hpp  QuantumDetail.hpp  QuantumForward.hpp  QuantumGates.hpp  QuantumOperations.hpp  QuantumParameters.hpp  QuantumProof.hpp  QuantumState.h  QuantumState.hpp  QuantumTypes.hpp  QuantumUtils.hpp
include/rollup/: AIRollupAgent.h  AIRollupAgent.hpp  BatchProcessor.h  BatchProcessor.hpp  CrossChainState.h  CrossChainState.hpp  CrossRollupBridge.h  CrossRollupBridge.hpp  DataCompressor.h  DataCompressor.hpp  EmergencyExit.h  EmergencyExit.hpp  EnhancedRollupMLModel.h  EnhancedRollupMLModel.hpp  FraudProof.h  FraudProof.hpp  L1Bridge.h  L1Bridge.hpp  L2BlockProcessor.h  L2BlockProcessor.hpp  MEVProtection.h  MEVProtection.hpp  OptimisticAdapter.h  OptimisticAdapter.hpp  OptimizationResult.hpp  ParallelProcessor.h  ParallelProcessor.hpp  ProofAggregator.h  ProofAggregator.hpp  QuantumParameters.h  RollupBenchmark.hpp  RollupCoordinator.h  RollupCoordinator.hpp  RollupMLModel.h  RollupMLModel.hpp  RollupPerformanceMetrics.h  RollupPerformanceMetrics.hpp  RollupStateTransition.h  RollupStateTransition.hpp  RollupTransactionAPI.h  (+8 more)
include/storage/: PersistentStorage.h  PersistentStorage.hpp
include/utils/: LockFreeQueue.hpp
include/zkp/: ProofSystem.hpp  QZKPGenerator.h  QZKPGenerator.hpp  QZKPVerifier.h  QZKPVerifier.hpp  Types.h  Types.hpp
src/: main.cpp
src/api/: RollupAPI.cpp
src/blockchain/: AIBlock.cpp  Account.cpp  AddressManager.cpp  Block.cpp  Chain.cpp  Transaction.cpp
src/cli/: QuidsCLI.cpp  QuidsCommand.cpp
src/cli/commands/: StartCommand.cpp  StatusCommand.cpp  StopCommand.cpp
src/common/: Config.cpp  Logger.cpp
src/consensus/: OptimizedPOBPC.cpp  POBPC.cpp
src/control/: QuidsControl.cpp
src/core/: OptimizedAIBlock.cpp  OptimizedAIBlock.hpp
src/crypto/: falcon_signature.cpp
src/evm/: Address.cpp  Compression.cpp  EVMExecutor.cpp  ExternalLink.cpp  FloatingPoint.cpp  Memory.cpp  ProofVerification.cpp  SolidityParser.cpp  Stack.cpp  Storage.cpp  uint256.cpp
src/network/: NATPMP.cpp  OptimizedNetworkLayer.cpp  P2PConnection.cpp  P2PNetwork.cpp  P2PNode.cpp  QUICTransport.cpp  QUICTransport.hpp  STUNClient.cpp  UPnPClient.cpp
src/node/: QuidsNode.cpp
src/quantum/: QuantumCircuit.cpp  QuantumCrypto.cpp  QuantumCrypto.cpp.new  QuantumGates.cpp  QuantumState.cpp  QuantumUtils.cpp
src/rl/: QuantumRLAgent.cpp  QuantumRLAgent.hpp
src/rollup/: AIRollupAgent.cpp  BatchProcessor.cpp  CrossRollupBridge.cpp  DataCompressor.cpp  EmergencyExit.cpp  EnhancedRollupMLModel.cpp  FraudProof.cpp  L1Bridge.cpp  MEVProtection.cpp  OptimisticAdapter.cpp  ParallelProcessor.cpp  ProofAggregator.cpp  RollupBenchmark.cpp  RollupMLModel.cpp  RollupStateTransition.cpp  RollupTransactionAPI.cpp  StateManager.cpp  StateTransitionProof.cpp
src/storage/: PersistentStorage.cpp
src/zkp/: QZKPGenerator.cpp  QZKPVerifier.cpp
test/network/: P2PConnectionTests.cpp
tests/: CMakeLists.txt  quantum_state_test.cpp  test_basic.cpp
tests/blockchain/: TransactionTest.cpp
tests/consensus/: POBPCTests.cpp
tests/evm/: EVMExecutorTest.cpp  uint256Test.cpp
tests/performance/: PerformanceTests.cpp  RealisticPerformanceTests.cpp
tests/quantum/: QuantumCryptoTests.cpp
tests/rollup/: AIRollupTests.cpp  EnhancedMLModelTests.cpp  MLModelTests.cpp  RollupBenchmarkTests.cpp  RollupTests.cpp  TransactionAPITests.cpp
